--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,9 @@
 /* -----------------------------------------------------------------  */
 /* -----------------------------------------------------------------  */
 
-html {
+/* html {
   zoom: 110%;
-}
+} */
 
 
 /* https://stackoverflow.com/questions/10853881/how-to-remove-underline-from-a-link-in-html*/
