--- a/Note/SessionStorage/index-session.css
+++ b/Note/SessionStorage/index-session.css
@@ -134,6 +134,22 @@ header {
     color: #4a76a8;
 }
 
+.action-button2 {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    border-radius: 4px;
+    padding: 8px 12px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    transition: all 0.2s;
+}
+
+.action-button2:hover {
+    background-color: rgba(255, 255, 255, 0.323);
+    color: #000000;
+}
+
 .button-link {
     background-color: transparent;
     color: rgb(0, 0, 0);
